--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,12 @@
-# main links links
 main:
   - title: "About Me"
-    url: "/#about-me"
+    url: "#about-me"
 
   - title: "News"
-    url: "/#news"
+    url: "#news"
 
   - title: "Publications"
-    url: "/#selected-publiclications"
+    url: "#selected-publications"
 
   - title: "Services"
-    url: "/#services"
+    url: "#services"
